<resources>
    <string name="app_name">SmartHouse</string>
    <string name="relay_n">Реле %1$d</string>


    <!--Настройки реле-->
    <string name="description">Описание</string>
    <string name="hand_mode">Ручной режим</string>
    <string name="temp_mode">Температура</string>
    <string name="hot">Нагрев</string>
    <string name="degree">°С</string>
    <string name="degree_with_digital">%d °С</string>
    <string name="degree_with_digital_float">%.1f °С</string>
    <string name="percent_with_digital">%d %%</string>
    <string name="percent_with_digital_float">%.1f %%</string>
    <string name="cool">Охлаждение</string>
    <string name="temp_off">Отключение:</string>
    <string name="temp_on">Включение:</string>
    <string name="time_mode">Время</string>
    <string name="minutes">мин.</string>
    <string name="minutes_with_digital">%d мин.</string>
    <string name="period_time">Период:</string>
    <string name="duration_time">Длительность:</string>
    <string name="save">Сохранить</string>
    <string-array name="sensors">
        <item>Датчик 1</item>
        <item>Датчик 2</item>
        <item>Датчик 3</item>
    </string-array>
    <!---->

    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="OK">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="refreshData">Обновление данных...</string>
    <string name="checkAdress">Сервер недоступен.\nПроверьте наличие соединения и адрес сервера.</string>

    <!--Настройки общие-->
    <string name="settingsTitle">Настройки</string>
    <string name="netSettings">Настройки сети</string>
    <string name="deviceURL">URL устр-ва:</string>
    <string name="insertIP">IP устройства:</string>
    <string name="defaultAddress">192.168.0.200</string>
    <string name="notificationTicker">Превышена температура</string>
    <string name="notificationTemp">Датчик %1$d: %2$s°С.</string>


    <!--Диалог сенсора-->

    <string name="sensor">Датчик</string>
    <string name="location">Локация</string>
    <string name="sensorDesc">Описание датчика</string>


    <!--    Константы-->
    <string name="EXTRA_RELAY_ID">grey.smarthouse.relay_id</string>


    <string name="addLocation">Добавьте локацию</string>
    <string name="locationName">Название</string>
    <string name="locationNameEmptyError">Введите название</string>
    <string name="locationNameDublicateError">Эта локация уже существует</string>

</resources>
