<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="grey.smarthouse.data.RelayMode" />

        <variable
            name="viewModel"
            type="grey.smarthouse.ui.relaySettingsScreen.RelaySettingsVM" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:padding="0dp">
        <!--android:background="@color/colorCustomBack">-->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/relayNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@{String.format(@string/relay_n, viewModel.relay.number)}"
                        android:textSize="24sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>


                    <EditText
                        android:id="@+id/relayDescription"
                        android:layout_width="322dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:hint="@string/description"
                        android:inputType="text"
                        android:text="@={viewModel.relay.description}"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/relayNumber" />

                    <ImageView
                        android:id="@+id/ic_hand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/relayDescription"
                        app:srcCompat="@drawable/ic_hand" />

                    <CheckBox
                        android:id="@+id/handModeCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:checked="@{viewModel.relay.mode == 2}"
                        android:onClick="@{_ -> viewModel.updateCheckBoxes(2)}"
                        android:text="@string/hand_mode"
                        android:textColor="@color/colorCustomText"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/ic_hand"
                        app:layout_constraintTop_toBottomOf="@+id/relayDescription" />

                    <ImageView
                        android:id="@+id/ic_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/handModeCheckbox"
                        app:icon="@{viewModel.relay.topTemp > viewModel.relay.botTemp}" />

                    <CheckBox
                        android:id="@+id/tempModeCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:checked="@{viewModel.relay.mode == 0}"
                        android:onClick="@{_ -> viewModel.updateCheckBoxes(0)}"
                        android:text="@string/temp_mode"
                        android:textColor="@color/colorCustomText"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/ic_temp"
                        app:layout_constraintTop_toBottomOf="@+id/handModeCheckbox" />

                    <Spinner
                        android:id="@+id/spinner"

                        android:layout_width="145dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:entries="@array/sensors"
                        app:layout_constraintStart_toEndOf="@+id/tempModeCheckbox"
                        app:layout_constraintTop_toBottomOf="@+id/handModeCheckbox" />

                    <TextView
                        android:id="@+id/textTopTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/temp_up"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tempModeCheckbox" />

                    <EditText
                        android:id="@+id/topTemp"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/edit_text_style"
                        android:ems="5"
                        android:enabled="@{viewModel.relay.mode == 0}"
                        android:hint="0"
                        android:inputType="number"
                        android:paddingStart="5dp"
                        android:paddingEnd="2dp"
                        android:text="@={`` + viewModel.relay.topTemp}"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/textTopTemp"
                        app:layout_constraintTop_toBottomOf="@+id/tempModeCheckbox" />

                    <TextView
                        android:id="@+id/textTopDegree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/degree"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/topTemp"
                        app:layout_constraintTop_toBottomOf="@+id/tempModeCheckbox" />

                    <TextView
                        android:id="@+id/textBotTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/temp_down"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textTopTemp" />

                    <EditText
                        android:id="@+id/botTemp"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/edit_text_style"
                        android:ems="10"
                        android:enabled="@{viewModel.relay.mode == 0}"
                        android:hint="0"
                        android:inputType="number"
                        android:paddingStart="5dp"
                        android:paddingEnd="2dp"
                        android:text="@={`` + viewModel.relay.botTemp}"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/textTopTemp"
                        app:layout_constraintTop_toBottomOf="@+id/topTemp" />

                    <TextView
                        android:id="@+id/textBotDegree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/degree"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/botTemp"
                        app:layout_constraintTop_toBottomOf="@+id/textTopDegree" />

                    <ImageView
                        android:id="@+id/ic_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textBotTemp"
                        app:srcCompat="@drawable/ic_time_white_24dp" />

                    <CheckBox
                        android:id="@+id/timeModeCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:checked="@{viewModel.relay.mode == 1}"
                        android:onClick="@{_ -> viewModel.updateCheckBoxes(1)}"
                        android:text="@string/time_mode"
                        android:textColor="@color/colorCustomText"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/ic_time"
                        app:layout_constraintTop_toBottomOf="@+id/textBotTemp" />

                    <TextView
                        android:id="@+id/textPeriodTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/period_time"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/timeModeCheckbox" />

                    <EditText
                        android:id="@+id/periodTime"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/edit_text_style"
                        android:ems="5"
                        android:enabled="@{viewModel.relay.mode == 1}"
                        android:hint="0"
                        android:inputType="number"
                        android:paddingStart="5dp"
                        android:paddingEnd="2dp"
                        android:text="@={`` + viewModel.relay.periodTime}"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/textDurationTime"
                        app:layout_constraintTop_toBottomOf="@+id/timeModeCheckbox" />

                    <TextView
                        android:id="@+id/textPeriodMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/minutes"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/periodTime"
                        app:layout_constraintTop_toBottomOf="@+id/timeModeCheckbox" />

                    <TextView
                        android:id="@+id/textDurationTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/duration_time"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textPeriodTime" />

                    <EditText
                        android:id="@+id/durationTime"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/edit_text_style"
                        android:ems="10"
                        android:enabled="@{viewModel.relay.mode == 1}"
                        android:hint="0"
                        android:inputType="number"
                        android:paddingStart="5dp"
                        android:paddingEnd="2dp"
                        android:text='@={"" + viewModel.relay.durationTime}'
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/textDurationTime"
                        app:layout_constraintTop_toBottomOf="@+id/periodTime" />

                    <TextView
                        android:id="@+id/textDurationMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/minutes"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/durationTime"
                        app:layout_constraintTop_toBottomOf="@+id/textPeriodMin" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/saveButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:onClick="@{(view)->viewModel.setSettingsToRelay()}"
                        android:text="@string/save"
                        android:textColor="#000000"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textDurationTime" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>